[package]
name = "jarvis-app"
version = "0.0.3"
description = "Jarvis Voice Assistant"
authors = ["Abraham Tugalov"]
license = "GPL-3.0-only"
repository = "https://github.com/Priler/jarvis"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
hound = "3.5.0"
pv_recorder = "1.2.6"
pv_porcupine = "3.0.3"
seqdiff = "0.3.0"
vosk = "0.3.1"
rand = "0.9.2"
rodio = "0.21.1"
rustpotter = "3.0.2"
log = "0.4.18"
once_cell = "1.18.0"
atomic_enum = "0.3.0"
portaudio = "0.8.0"
platform-dirs = "0.3.0"
simple-log = "2.4.0"
tray-icon = "0.21.2"
winit = "0.30.12"
image = "0.25.9"
serde_yaml = "0.9.33"
kira = "0.11.0"
gtk = "0.18.2"

[features]
