[package]
name = "jarvis-app"
version = "0.0.3"
description = "Jarvis Voice Assistant"
authors = ["Abraham Tugalov"]
license = "GPL-3.0-only"
repository = "https://github.com/Priler/jarvis"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
hound = "3.5.1"
# pv_recorder = "1.2.2"
# pv_porcupine = "3.0.2"
seqdiff = "0.3.0"
vosk = "0.3.1"
rand = "0.9.0-alpha.1"
rodio = "0.21.1"
rustpotter = "3.0.2"
log = "0.4.21"
once_cell = "1.19.0"
atomic_enum = "0.3.0"
portaudio = "0.8.0"
platform-dirs = "0.3.0"
simple-log = "2.4.0"
tray-icon = { version = "0.21.2" }
winit = "0.30.12"
image = "0.25.9"
serde_yaml = "0.9.33"
kira = "0.11.0"

[features]
default = ["jarvis_app"]
jarvis_app = [] # feature flag saying this is an app