[package]
name = "jarvis-app"
version = "0.1.0"
description = "Jarvis Voice Assistant"
authors = ["Abraham Tugalov"]
license = "GPL-3.0-only"
repository = "https://github.com/Priler/jarvis"
edition = "2024"
keywords = ["assistant", "ai", "offline"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
hound = "3.5.1"
pv_recorder = { git = "https://github.com/Priler/pvrecorder" }
# pv_porcupine = "3.0.2"
seqdiff = "0.3.0"
vosk = "0.3.1"
rand = "^0.8.5"
rodio = "0.21.1"
# rustpotter = "3.0.2"
log = "0.4.21"
once_cell = "1.19.0"
atomic_enum = "0.3.0"
# portaudio = "0.8.0"
platform-dirs = "0.3.0"
simple-log = "2.4.0"
tray-icon = { version = "0.21.2" }
winit = "0.30.12"
image = "0.25.9"
serde_yaml = "0.9.33"
kira = "0.11.0"

#[patch.crates-io]
#candle-core = { git = "https://github.com/huggingface/candle", tag = "v0.9.0" }

[features]
default = ["jarvis_app"]
jarvis_app = [] # feature flag saying this is an app